<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="accounts_category_title">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_network">Network</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Apps</string>
    <string name="device_storage_reset">Storage &amp; reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="apps_downloaded">Downloaded apps</string>
    <string name="apps_system">System apps</string>
    <string name="apps_running">Running apps</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_home">Home screen</string>
    <string name="system_search">Search</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_speech">Speech</string>
    <string name="system_inputs">Inputs</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_developer_options">Developer options</string>
    <string name="accessibility_none">None</string>
    <string name="system_diagnostic">Usage &amp; Diagnostics</string>
    <string name="about_system_update">System update</string>
    <string name="about_preference">About</string>
    <string name="device_name">Device name</string>
    <string name="restart_button_label">Restart</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_legal_license">Open source licenses</string>
    <string name="about_terms_of_service">Google legal</string>
    <string name="about_license_activity_unavailable">License data is unavailable</string>
    <string name="about_model">Model</string>
    <string name="about_version">Version</string>
    <string name="about_serial">Serial number</string>
    <string name="about_build">Build</string>
    <plurals name="show_dev_countdown">
        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer</item>
        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer</item>
    </plurals>
    <string name="about_ads">Ads</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer</string>
    <string name="device_info_default">Unknown</string>
    <string name="selinux_status">SELinux status</string>
    <string name="selinux_status_disabled">Disabled</string>
    <string name="selinux_status_permissive">Permissive</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Network, serial numbers and other information</string>
    <string name="manual">Manual</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="device_feedback">Send feedback about this device</string>
    <string name="oem_preferred_feedback_reporter" translatable="false" />
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="device_status_title">Status</string>
    <string name="battery_status_title">Battery status</string>
    <string name="battery_level_title">Battery level</string>
    <string name="sim_status_title">SIM status</string>
    <string name="imei_information_title">IMEI information</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_up_time">Up time</string>
    <string name="status_wimax_mac_address">4G MAC address</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="webview_license_title">System WebView License</string>
    <string name="wallpaper_attributions">Wallpapers</string>
    <string name="wallpaper_attributions_values">Satellite imagery providers:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky</string>
    <string name="title_mac_address">MAC address</string>
    <string name="title_signal_strength">Signal strength</string>
    <string name="title_ip_address">IP address</string>
    <string name="title_internet_connection">Internet connection</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="wifi_setting_header_other_options">Other options</string>
    <string name="wifi_setting_see_all">See all</string>
    <string name="wifi_setting_available_networks">Available networks</string>
    <string name="wifi_setting_other_options_wps">Connect via WPS</string>
    <string name="wifi_setting_other_options_add_network">Add new network</string>
    <string name="title_wifi_proxy_settings">Proxy settings</string>
    <string name="title_wifi_ip_settings">IP settings</string>
    <string name="wifi_forget_network">Forget network</string>
    <string name="storage_available">Available</string>
    <string name="storage_apps_usage">Apps</string>
    <string name="storage_downloads_usage">Downloads</string>
    <string name="storage_dcim_usage">Photos &amp; videos</string>
    <string name="storage_music_usage">Audio</string>
    <string name="storage_media_misc_usage">Misc.</string>
    <string name="storage_media_cache_usage">Cached data</string>
    <string name="storage_eject">Eject</string>
    <string name="storage_format">Erase &amp; format</string>
    <string name="storage_migrate">Migrate data to this storage</string>
    <string name="system_location">Location</string>
    <string name="security_unknown_sources_title">Unknown sources</string>
    <string name="security_unknown_sources_desc">Allow installation of apps from sources other than the Play Store</string>
    <string name="security_verify_apps_title">Verify apps</string>
    <string name="security_verify_apps_desc">Disallow or warn before installation of apps that may cause harm</string>
    <string name="user_new_profile_name">Restricted Profile</string>
    <string name="restricted_profile_switch_to" >Enter restricted profile</string>
    <string name="restricted_profile_switch_out" >Exit restricted profile</string>
    <string name="restricted_profile_delete_title" >Delete restricted profile</string>
    <string name="restricted_profile_create_title">Create restricted profile</string>
    <string name="restricted_profile_configure_apps_title" >Allowed apps</string>
    <string name="restricted_profile_change_password_title" >Change pin</string>
    <string name="security_patch">Android security patch level</string>
</resources>