<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/about_preference">

    <!-- System update settings - launches activity -->
    <Preference android:key="system_update_settings"
        android:title="@string/about_system_update">
        <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
    </Preference>


    <Preference android:key="additional_system_update_settings"
        android:title="@string/additional_system_update_settings_list_item_title">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="@string/additional_system_update"
            android:targetClass="@string/additional_system_update_menu" />
    </Preference>

    <Preference android:key="device_name"
        android:title="@string/device_name" >
        <intent android:action="android.settings.DEVICE_NAME" />
    </Preference>

    <com.android.tv.settings.LongClickPreference
        android:key="restart"
        android:title="@string/restart_button_label"
        android:fragment="com.android.tv.settings.about.RebootConfirmFragment" />

    <!-- Device status - launches activity -->
    <Preference android:key="status_info"
        android:title="@string/device_status"
        android:summary="@string/device_status_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.tv.settings"
            android:targetClass="com.android.tv.settings.about.StatusActivity" />
    </Preference>

    <!-- Manual -->
    <Preference
        android:key="manual"
        android:title="@string/manual">
        <intent android:action="android.settings.SHOW_MANUAL" />
    </Preference>

    <!-- Legal Information -->
    <Preference
        android:key="container"
        android:title="@string/about_legal_info"
        android:fragment="com.android.tv.settings.about.LegalFragment" />

    <Preference
        android:key="regulatory_info"
        android:title="@string/regulatory_information">
        <intent android:action="android.settings.SHOW_REGULATORY_INFO" />
    </Preference>

    <!-- Feedback on the device -->
    <Preference android:key="device_feedback"
        android:title="@string/device_feedback" />

    <!-- Device hardware model -->
    <Preference android:key="device_model"
        android:title="@string/about_model"
        android:summary="@string/device_info_default"/>

    <!-- Device firmware version -->
    <Preference android:key="firmware_version"
        android:title="@string/about_version"
        android:summary="@string/device_info_default"/>

    <!-- Security patch level -->
    <Preference android:key="security_patch"
        android:title="@string/security_patch"
        android:summary="@string/device_info_default"/>

    <!-- Device FCC equipment id -->
    <Preference android:key="fcc_equipment_id"
        android:title="@string/fcc_equipment_id"
        android:summary="@string/device_info_default"/>

    <!-- Device Baseband version -->
    <Preference android:key="baseband_version"
        android:title="@string/baseband_version"
        android:summary="@string/device_info_default"/>

    <!-- Device Kernel version -->
    <Preference android:key="kernel_version"
        android:title="@string/kernel_version"
        android:summary="@string/device_info_default"/>

    <!-- Detailed build version -->
    <Preference android:key="build_number"
        android:title="@string/about_build"
        android:summary="@string/device_info_default"/>

    <!-- SELinux status information -->
    <Preference android:key="selinux_status"
        android:title="@string/selinux_status"
        android:summary="@string/selinux_status_enforcing"/>

</PreferenceScreen>
