<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/connectivity_network">
    <SwitchPreference
        android:key="wifi_enable"
        android:persistent="false"
        android:title="@string/wifi_setting_enable_wifi" />

    <com.android.tv.settings.connectivity.CollapsibleCategory
        android:key="wifi_list"
        android:title="@string/wifi_setting_available_networks" />
    <Preference
        android:key="wifi_collapse"
        android:title="@string/wifi_setting_see_all" />

    <PreferenceCategory
        android:key="wifi_other"
        android:title="@string/wifi_setting_header_other_options" >
        <Preference
            android:key="wifi_wps"
            android:title="@string/wifi_setting_other_options_wps" >
            <intent
                android:targetClass="com.android.tv.settings.connectivity.WpsConnectionActivity"
                android:targetPackage="com.android.tv.settings" />
        </Preference>
        <Preference
            android:key="wifi_add"
            android:title="@string/wifi_setting_other_options_add_network" >
            <intent
                android:targetClass="com.android.tv.settings.connectivity.AddWifiNetworkActivity"
                android:targetPackage="com.android.tv.settings" />

        </Preference>
        <SwitchPreference
            android:key="wifi_always_scan"
            android:persistent="false"
            android:title="@string/wifi_setting_always_scan"
            android:summary="@string/wifi_setting_always_scan_context" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ethernet"
        android:title="@string/connectivity_ethernet" >
        <Preference
            android:key="ethernet_status"
            android:title="@string/not_connected" />
        <Preference
            android:key="ethernet_proxy"
            android:title="@string/title_wifi_proxy_settings" />
        <Preference
            android:key="ethernet_dhcp"
            android:title="@string/title_wifi_ip_settings" />
    </PreferenceCategory>
</PreferenceScreen>